cmake_minimum_required(VERSION 3.14)

# add include directory
include_directories(${GLFW_BUILD_DIRECTORY}/../include)
include_directories(${GLM_INCLUDE_DIRECTORY})
include_directories(${VULKAN_INCLUDE_DIRECTORY})

# link library directory
if(WIN32)
	if(MSVC)
		link_directories(${GLFW_BUILD_DIRECTORY}/src/Debug)
		link_directories(${GLFW_BUILD_DIRECTORY}/src/Release)
	elseif(MINGW)
		link_directories(${GLFW_BUILD_DIRECTORY}/src)
	endif()
elseif(LINUX)
	link_directories(${GLFW_BUILD_DIRECTORY}/src)
endif()

add_subdirectory(vk_window)
add_subdirectory(vk_instance)
add_subdirectory(vk_physicalDevice)
add_subdirectory(vk_logicalDevice)
add_subdirectory(vk_swapchain)
add_subdirectory(vk_imageView)
add_subdirectory(vk_shader)
add_subdirectory(vk_fixedFunctions)
add_subdirectory(vk_renderPass)
add_subdirectory(vk_pipeline)
add_subdirectory(vk_framebuffer)
add_subdirectory(vk_commandBuffer)
add_subdirectory(vk_draw)