cmake_minimum_required(VERSION 3.14)

add_subdirectory(vk_window)
add_subdirectory(vk_instance)
add_subdirectory(vk_physicalDevice)
add_subdirectory(vk_logicalDevice)
add_subdirectory(vk_swapchain)
add_subdirectory(vk_imageView)
add_subdirectory(vk_shader)
add_subdirectory(vk_fixedFunctions)
add_subdirectory(vk_renderPass)
add_subdirectory(vk_pipeline)
add_subdirectory(vk_framebuffer)
add_subdirectory(vk_commandBuffer)
add_subdirectory(vk_draw)